# Snake

./: .gitignore  CMakeLists.txt  Firework.rar  README  README.md  game.cfg
Main/: Bounds.cpp  Bounds.hpp  CMakeLists.txt  Color24.cpp  Color24.hpp  Common.cpp  Common.hpp  DebugLogger.cpp  DebugLogger.hpp  Direction.cpp  Direction.hpp  Event.cpp  Event.hpp  EventHandler.cpp  EventHandler.hpp  Food.cpp  Food.hpp  GameState.cpp  GameState.hpp  GameWorld.cpp  GameWorld.hpp  Graphics.cpp  Graphics.hpp  Logger.cpp  Logger.hpp  ObjectManager.cpp  ObjectManager.hpp  Physics.cpp  Physics.hpp  Point.cpp  Point.hpp  SDL.cpp  SDL.h  SDL.hpp  Screen.cpp  Screen.hpp  SentinelFood.cpp  SentinelFood.hpp  Side.cpp  Side.hpp  (+22 more)
Main_test/: CMakeLists.txt  test_cgq.cpp  test_cqueue.cpp
builds/: Gingerbread-linux  README
gingerbread-in-c/: CMakeLists.txt  event.c  event.h  graphics.c  graphics.h  lookup_tables.c  lookup_tables.h  main.c  math.c  math.h  screen.c  screen.h
gtest/: CMakeLists.txt  gtest-death-test.cc  gtest-internal-inl.h  gtest-port.cc  gtest-test-part.cc  gtest.cc  gtest_main.cc
include/gtest/: array_check.h  gtest-typed-test.h  gtest.h
include/gtest/internal/: gtest-port.h  gtest-type-util.h
main/: Bounds.cpp  Bounds.hpp  CMakeLists.txt  Clock.cpp  Clock.hpp  Color24.cpp  Color24.hpp  Common.hpp  Config.cpp  Config.hpp  ConfigLoader.cpp  ConfigLoader.hpp  ConfigLoader__Scope.cpp  ConfigScope.cpp  ConfigScope.hpp  Config__ConfigScope.cpp  Config__ConfigScope__ScopeCollection.cpp  Config__SpawnCollectionConfig.cpp  Config__SpawnsData.cpp  Config__defaultConfig.cpp  Counter.cpp  Counter.hpp  Direction.cpp  Direction.hpp  EventHandler.cpp  EventHandler.hpp  Food.cpp  Food.hpp  Food__FoodInfo.cpp  GameState.cpp  GameState.hpp  GameWorld.cpp  GameWorld.hpp  Graphics.cpp  Graphics.hpp  Line.cpp  Line.hpp  Logger.cpp  Logger.hpp  Mine.cpp  (+47 more)
main/resources/: death.mid  die.mid  eat.mid  gameIntro.mid  in-progress game music.mid  mine appear.mid  spawn.mid  startup.mid  theme.mid  title theme.mid
main_test/: CMakeLists.txt  test_cgq.cpp
resources/: food appear.mid  game intro.mid  main menu intro.mid  title theme.mid
