add_executable(GingerbreadPrototype
	Bounds.cpp
	collision.c
	Color24.cpp
	Direction.cpp
	Event.cpp
	Food.cpp
	GameWorld.cpp
	Logger.cpp
	main.cpp
	ObjectManager.cpp
	Point.cpp
	Screen.cpp
	SDL.cpp
	SentinelFood.cpp
	Side.cpp
	Snake.cpp
	SnakeSegment.cpp
	Timer.cpp
	Vector2D.cpp
	Wall.cpp
	WorldObject.cpp
)

target_link_libraries(GingerbreadPrototype
	${Boost_LIBRARIES}
	${SDL_LIBRARY}
)