add_executable(GingerbreadPrototype
	Bounds.cpp
	collision.c
	Color24.cpp
	Direction.cpp
	EventHandler.cpp
	Food.cpp
	GameWorld.cpp
	Graphics.cpp
	Logger.cpp
	main.cpp
	Screen.cpp
	SDL.cpp
	SentinelFood.cpp
	Side.cpp
	Snake.cpp
	SnakeSegment.cpp
	Timer.cpp
	UniqueObjectList.cpp
	Vector2D.cpp
	Wall.cpp
	WorldObject.cpp
)

target_link_libraries(GingerbreadPrototype
	${Boost_LIBRARIES}
	${SDL_LIBRARY}
)