add_executable(GingerbreadPrototype
	Bounds.cpp
	collision.c
	Color24.cpp
	Counter.cpp
	Direction.cpp
	EventHandler.cpp
	Food.cpp
	Food__FoodInfo.cpp
	GameWorld.cpp
	Graphics.cpp
	Logger.cpp
	main.cpp
	Music.cpp
	Physics.cpp
	Screen.cpp
	SDLInitializer.cpp
	SentinelFood.cpp
	Side.cpp
	Snake.cpp
	SnakeSegment.cpp
	Timer.cpp
	UniqueObjectList.cpp
	Vector2D.cpp
	Wall.cpp
	WorldObject.cpp
)

target_link_libraries(GingerbreadPrototype
	${Boost_LIBRARIES}
	${SDL_LIBRARY}
	SDL_mixer
)
