add_executable(GingerbreadPrototype
	game.cfg

	Bounds.cpp
	Bounds.hpp
	Clock.cpp
	Clock.hpp
	collision.c
	collision.h
	Color24.cpp
	Color24.hpp
	Common.hpp
	Config.hpp
	Config.cpp
	ConfigLoader.hpp
	ConfigLoader.cpp
	custom_algorithm.hpp
	Direction.cpp
	Direction.hpp
	EventHandler.cpp
	EventHandler.hpp
	Food.cpp
	Food.hpp
	GameWorld.cpp
	GameWorld.hpp
	Graphics.cpp
	Graphics.hpp
	Line.cpp
	Line.hpp
	Logger.cpp
	Logger.hpp
	main.cpp
	Mine.cpp
	Mine.hpp
	Music.cpp
	Music.hpp
	Physics.cpp
	Physics.hpp
	Point.hpp
	Point.cpp
	Screen.cpp
	Screen.hpp
	SDLInitializer.cpp
	SDLInitializer.hpp
	Sentinel.cpp
	Sentinel.hpp
	Snake.cpp
	Snake.hpp
	SnakeSegment.cpp
	SnakeSegment.hpp
	Sound.cpp
	Sound.hpp
	Spawn.cpp
	Spawn.hpp
	Timer.cpp
	Timer.hpp
	UniqueObjectList.cpp
	UniqueObjectList.hpp
	Vector2D.cpp
	Vector2D.hpp
	Wall.cpp
	Wall.hpp
	WorldObject.cpp
	WorldObject.hpp
	ZippedUniqueObjectList.hpp
)

target_link_libraries(GingerbreadPrototype
	${Boost_LIBRARIES}
	${SDL_LIBRARY}
	${SDLMAIN_LIBRARY}
	${SDLMIXER_LIBRARY}
)
